# django-apostas

./: pyproject.toml
app/: api.py  settings.py  urls.py
authentication/: urls.py  views.py
lay0x1/: api.py  apps.py
transform/: feature_engineering.py
